# advent-of-code

./: .flake8
2022/: pyproject.toml
2022/d1/: calorie_grouper.py
2022/d2/: game_round.py  strategy_decoders.py  strategy_guide.py
2022/d7/: file_system_reader.py
