[tool.poetry]
name = "advent-2022"
version = "0.1.0"
description = ""
authors = ["brent-moffit <72231013+brent-moffit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "advent_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^9.0.0"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
autoflake8 = "^0.4.0"
isort = "^5.10.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
